# RodosPlayground

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  Beacon_8cpp.html  CMakeLists.txt  CMakeLists_8txt.html  CMakePresets.json  CONTRIBUTING.md  CobcCommands_8cpp.html  CobcCommands_8hpp.html  Cobc_8hpp.html  CommandParser_8cpp.html  CommandParser_8hpp.html  Communication_8hpp.html  Demo_2CMakeLists_8txt.html  Dockerfile  EduDataFrameFaker_8cpp.html  EduData_8cpp.html  EduHeartbeat_8cpp.html  HACKING.md  HelloGpio_8cpp.html  HelloSpi_8cpp.html  HelloUart_8cpp.html  HelloWorld_8cpp.html  Io_8hpp.html  Lib_8cpp.html  Lib_8hpp.html  Makefile  Nucleo_8hpp.html  Pins_8hpp.html  README.md  README_8md.html  Topics_8hpp.html  Util_8hpp.html  Utility_8hpp.html  Write_8hpp.html  about.html  about_8dox.html  annotated.html  (+31 more)
.github/workflows/: ci-push.yml  ci-release.yml  ci.yml
Source/: CMakeLists.txt  HelloWorld.cpp  Lib.cpp  Lib.hpp  Main.cpp  etl_profile.h
Source/Demo/: Beacon.cpp  Beacon.hpp  CMakeLists.txt  CobcCommands.cpp  CobcCommands.hpp  CommandParser.cpp  CommandParser.hpp  EduData.cpp  EduDataFrameFaker.cpp  EduHeartbeat.cpp  EduHeartbeatInterrupt.cpp  HelloHeartbeat.cpp  ResetCounter.cpp  Topics.cpp  Topics.h  Topics.hpp  Util.hpp  Utility.hpp  topics.cpp
Source/HardwareTests/: CMakeLists.txt  GPIO_test.cpp  HelloGpio.cpp  HelloSpi.cpp  HelloUart.cpp  Hello_SPI_UART.cpp
Source/Io/: CMakeLists.txt  Cobc.hpp  Io.hpp  Nucleo.hpp  Pins.hpp
Source/RodosWrappers/: CMakeLists.txt  Communication.hpp  Write.hpp
Test/: CMakeLists.txt  UtilityMock.hpp  test.cpp
Test/Source/: CMakeLists.txt  RodosPlayground_Test.cpp  Test.cpp  UtilityMock.hpp  test.cpp
Test/expected-outputs/: helloworld.txt  truc.txt
Test/utility/: fifo-test.cpp  helloworld.cpp
cmake/: Stm32f411.cmake  custom-commands.cmake  dev-mode.cmake  docs.cmake  install-config.cmake  install-rules.cmake  lint.cmake  prelude.cmake  spell.cmake  variables.cmake
docs/: Doxyfile.in
source/: CMakeLists.txt  lib.cpp
test/: CMakeLists.txt
test/source/: RodosPlayground_test.cpp  rodos_playground_test.cpp
