add_executable(RodosPlayground_HelloUart)
target_sources(RodosPlayground_HelloUart PRIVATE HelloUart.cpp)
target_link_libraries(RodosPlayground_HelloUart PRIVATE rodos::rodos)

add_executable(RodosPlayground_Hello_SPI_UART)
target_sources(RodosPlayground_Hello_SPI_UART PRIVATE Hello_SPI_UART.cpp)
target_link_libraries(RodosPlayground_Hello_SPI_UART PRIVATE rodos::rodos)
